--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -21,54 +21,26 @@
             crossorigin="anonymous"></script>
 
 
-    <script src="../static/js/sidebar.js" type="module"></script>
-    <script src="../static/js/plus-minus.js" type="module"></script>
+    <script th:src="@{/js/sidebar.js}" type="module"></script>
+    <script th:src="@{/js/plus-minus.js}" type="module"></script>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" th:href="@{/static/css/cart.css}"/>
 
-    <link rel="stylesheet" href="../static/css/cart.css"/>
 
-    <link rel="icon" href="../static/images/ace-of-spades.png">
-    <title>Victory</title>
+    <th:block th:replace="~{/fragments/head.html}"/>
+
 </head>
 <body>
+
 <header>
+
     <nav id="nav" class="navbar navbar-expand">
-
-        <a href="/"><img src="../static/images/emblem.png"></a>
-
-        <ul id="menu">
-            <li><a href="/catalog">Catalog</a></li>
-            <li><a href="/search">Offers</a></li>
-            <span id="guest-nav">
-                    <li class="guest"><a href="/login">Login</a></li>
-                    <li class="guest"><a href="/register">Register</a></li>
-                </span>
-            <span id="user-nav">
-                    <li class="user"><a href="/create">Wishlist</a></li>
-                    <li id="logoutBtn" class="user"><a href="javascript:void(0)">Logout</a></li>
-            </span>
-        </ul>
-
-        <a href="#" id="menu-toggle" class="navbar-brand">&#9776</a>
+        <th:block th:replace="~{/fragments/navigation.html}"/>
     </nav>
+
 </header>
 
-<div id="wrapper">
-    <div id="sidebar-wrapper">
-        <ul class="sidebar-nav">
-            <li><a href="#">Catalog</a></li>
-            <li><a href="#">Offers</a></li>
-            <li><a href="#">Login</a></li>
-            <li><a href="#">Register</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Wishlist</a></li>
-            <li><a href="#">Logout</a></li>
-        </ul>
-    </div>
-</div>
+<th:block th:replace="~{/fragments/sidebar.html}"/>
 
 <main>
     <div class="container-fluid">
@@ -131,14 +103,6 @@
                                 </tr>
                                 </tbody>
                                 <tfoot>
-                                <tr>
-                                    <td colspan="2">Subtotal</td>
-                                    <td class="text-end">$159,98</td>
-                                </tr>
-                                <tr>
-                                    <td colspan="2">Shipping</td>
-                                    <td class="text-end">Ask for quote</td>
-                                </tr>
                                 <tr class="fw-bold">
                                     <td colspan="2">TOTAL</td>
                                     <td class="text-end">$169,98</td>
