--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -15,6 +15,7 @@
                             Profile
                         </a>
                     </li>
+                    <li><a th:href="@{/cart}">Cart</a></li>
                     <li>
                         <form th:action="@{/users/logout}"
                               th:method="POST">
