--- a/src/main/resources/templates/offerDetails.html
+++ b/src/main/resources/templates/offerDetails.html
@@ -56,11 +56,10 @@
                         <p th:text="*{description}"></p>
                         <h2 class="mt-5" th:text="|*{price}€|">
                         </h2>
-<!--                        todo: to cart, buy, like functionality - probably through rest api-->
+
                         <button class="btn btn-dark btn-rounded mr-1" data-toggle="tooltip" title="" data-original-title="Add to cart" id="add-cart-btn">
                             <i class="fa fa-shopping-cart"></i>
                         </button>
-                        <button class="btn btn-primary btn-rounded buy-btn"><a href="javascript:void(0)" id="purchase-btn">Buy Now</a></button>
                     </div>
 
                     <div class="col-lg-12 col-md-12 col-sm-12">
@@ -99,21 +98,18 @@
 
 <script th:inline="javascript">
 
-    const buyBtn=document.getElementById("purchase-btn");
     const addCartBtn=document.getElementById("add-cart-btn");
     const csrfHeaderName = document.head.querySelector('[name=_csrf_header]').content;
     const csrfHeaderValue = document.head.querySelector('[name=_csrf]').content;
 
-    addCartBtn.addEventListener("click", (ev)=>{
-        if(addCartBtn.classList.contains("carted")){
-            uncartProduct(ev);
-        }else{
-            addToCart(ev);
-        }
-    });
-    buyBtn.addEventListener("click", buyNow);
+    addCartBtn.addEventListener("click",addToCart);
 
     async function addToCart(ev){
+        if(addCartBtn.classList.contains("carted")){
+            uncartProduct(ev);
+            return;
+        }
+
         ev.preventDefault();
 
         const options={
@@ -151,11 +147,6 @@
         await fetch("http://localhost:8000/api/cart/delete", options);
 
         addCartBtn.classList.remove("carted");
-    }
-
-    async function buyNow(ev){
-        await addToCart(ev);
-        window.location="http://localhost:8000/cart";
     }
 </script>
 
