--- a/src/main/resources/templates/editDeck.html
+++ b/src/main/resources/templates/editDeck.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
@@ -17,70 +13,37 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js"></script>
 
+    <link rel="stylesheet" th:href="@{/css/addForm.css}"/>
+    <link rel="stylesheet" th:href="@{/css/bootstrap/bootstrapNav.css}"/>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+    <script th:src="@{/js/sidebar.js}" type="module"></script>
+    <script th:src="@{/js/showSelectedFiles.js}" type="module"></script>
 
-    <link rel="stylesheet" href="../static/css/addDeck.css"/>
-    <link rel="stylesheet" href="../static/css/bootstrap/bootstrapNav.css"/>
-
-    <script src="../static/js/sidebar.js" type="module"></script>
-
-    <link rel="icon" href="../static/images/ace-of-spades.png">
-    <title>Victory</title>
+    <th:block th:replace="~{/fragments/head.html}"/>
 </head>
 <body>
 
 <header>
 
     <nav id="nav" class="navbar navbar-expand">
-
-        <a href="/"><img src="../static/images/emblem.png"></a>
-
-        <ul id="menu">
-            <li><a href="/catalog">Catalog</a></li>
-            <li><a href="/search">Offers</a></li>
-            <span id="guest-nav">
-                    <li class="guest"><a href="/login">Login</a></li>
-                    <li class="guest"><a href="/register">Register</a></li>
-                </span>
-            <span id="user-nav">
-                    <li class="user"><a href="/create">Wishlist</a></li>
-                    <li id="logoutBtn" class="user"><a href="javascript:void(0)">Logout</a></li>
-            </span>
-        </ul>
-
-        <a href="#" id="menu-toggle" class="navbar-brand">&#9776</a>
+        <th:block th:replace="~{/fragments/navigation.html}"/>
     </nav>
 
 </header>
 
-<div id="wrapper">
-    <div id="sidebar-wrapper">
-        <ul class="sidebar-nav">
-            <li><a href="#">Catalog</a></li>
-            <li><a href="#">Offers</a></li>
-            <li><a href="#">Login</a></li>
-            <li><a href="#">Register</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Wishlist</a></li>
-            <li><a href="#">Logout</a></li>
-        </ul>
-    </div>
-</div>
+<th:block th:replace="~{/fragments/sidebar.html}"/>
 
 <main>
 
     <div class="container">
         <div class="row">
-            <div class="col-md-6 col-md-offset-3" id="offer-form-cont">
+            <div class="col-md-6 col-md-offset-3" id="form-cont">
                 <div class="panel panel-offer">
                     <div class="panel-heading">
                         <div class="row">
 
                             <div class="col">
-                                <label href="#" class="active" id="login-form-link">Edit Deck</label>
+                                <label class="active" id="login-form-link">Edit Deck</label>
                             </div>
 
                         </div>
@@ -90,58 +53,115 @@
                             <div class="col-lg-12">
 
 
-                                <form id="deck-form" method="post"
-                                      role="form" style="display: block;">
+                                <form id="deck-form" th:method="patch" th:action="@{/decks/add}"
+                                      enctype="multipart/form-data"
+                                      role="form" style="display: block;" th:object="${deck}">
 
 
                                     <div class="form-group">
-                                        <input type="text" name="username" id="title" tabindex="1"
-                                               class="form-control" placeholder="Title" value="">
+                                        <input type="text" name="title" id="title" tabindex="1"
+                                               class="form-control" placeholder="Title" value=""
+                                               th:field="*{title}" th:errorclass="invalid-field">
+                                        <div class="error"
+                                             th:text="${#strings.listJoin(#fields.errors('title'), '; ')}">
+                                        </div>
                                     </div>
-                                    <div class="form-group">
-                                        <input type="text" name="password" id="distributor" tabindex="2"
-                                               class="form-control" placeholder="Distributor">
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="password" name="password" id="creator" tabindex="2"
-                                               class="form-control" placeholder="Creator">
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="password" name="origin" id="origin" tabindex="2"
-                                               class="form-control" placeholder="Country of Origin">
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="number" step="0.01" name="recommended-price" id="Price" tabindex="2"
-                                               class="form-control" placeholder="Recommended Price">
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="text" step="0.01" name="description" id="description" tabindex="2"
-                                               class="form-control" placeholder="Description">
-                                    </div>
-                                    <div class="form-group">
-                                        <select class="selectpicker" multiple data-live-search="true">
-                                            <option>Mustard</option>
-                                            <option>Ketchup</option>
-                                            <option>Relish</option>
+
+                                    <div class="form-group distributor">
+                                        <select class="selectpicker" data-live-search="true"
+                                                name="categories" required
+                                                th:field="*{distributorBrand}" th:errorclass="is-invalid">
+
+                                            <option value=""></option>
+                                            <option th:each="distributor : ${distributors}" th:value="${distributor}"
+                                                    th:text="${distributor}"></option>
                                         </select>
+
+
+                                        <div class="error"
+                                             th:text="${#strings.listJoin(#fields.errors('distributorBrand'), '; ')}"></div>
+                                        <div><a target="_blank" th:href="@{/distributors/add}"
+                                                class="addMissingInfoAnchor">Cannot find the distributor you are
+                                            searching for?</a></div>
                                     </div>
+
+                                    <div class="form-group creator">
+                                        <select class="selectpicker" data-live-search="true"
+                                                name="categories" required
+                                                th:field="*{creatorName}" th:errorclass="is-invalid">
+
+                                            <option value=""></option>
+                                            <option th:each="creator : ${creators}" th:value="${creator}"
+                                                    th:text="${creator}"></option>
+                                        </select>
+
+
+                                        <div class="error"
+                                             th:text="${#strings.listJoin(#fields.errors('creatorName'), '; ')}"></div>
+
+                                        <div><a target="_blank" th:href="@{/creators/add}" class="addMissingInfoAnchor">Cannot
+                                            find the creator you are searching for?</a></div>
+
+                                    </div>
+
+                                    <div class="form-group">
+                                        <input type="text" name="countryOfOrigin" id="origin" tabindex="2"
+                                               class="form-control" placeholder="Country of Origin"
+                                               th:field="*{countryOfOrigin}" th:errorclass="invalid-field">
+                                        <div class="error"
+                                             th:text="${#strings.listJoin(#fields.errors('countryOfOrigin'), '; ')}">
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <input type="text" name="description" id="description" tabindex="2"
+                                               class="form-control" placeholder="Description"
+                                               th:field="*{description}" th:errorclass="invalid-field">
+                                        <div class="error"
+                                             th:text="${#strings.listJoin(#fields.errors('description'), '; ')}">
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group category">
+                                        <select class="selectpicker" multiple data-live-search="true"
+                                                name="categories" required
+                                                th:field="*{categories}" th:errorclass="is-invalid"
+                                        >
+                                            <option th:value="STANDARD">Standard</option>
+                                            <option th:value="GAME">Game</option>
+                                            <option th:value="MAGIC">Magic</option>
+                                            <option th:value="CARDISTRY">Cardistry</option>
+                                            <option th:value="VINTAGE">Vintage</option>
+                                            <option th:value="POKER">Poker</option>
+                                            <option th:value="GAFFED">Gaffed</option>
+                                            <option th:value="MARKED">Marked</option>
+                                        </select>
+                                        <div class="error"
+                                             th:text="${#strings.listJoin(#fields.errors('categories'), '; ')}"></div>
+                                    </div>
+
                                     <div class="form-group" id="image-group">
                                         <label for="formFile" class="custom-file-upload">
                                             Click to upload images
                                         </label>
-                                        <input class="form-control" type="file" id="formFile" multiple>
+                                        <input required class="form-control" type="file" id="formFile"
+                                               multiple
+                                               th:field="*{pictures}" th:errorclass="invalid-field"
+                                               name="pictures">
+                                        <div class="error"
+                                             th:text="${#strings.listJoin(#fields.errors('pictures'), '; ')}">
+                                        </div>
                                     </div>
 
                                     <table class="form-group" id="image-container">
+                                        <thead>
+                                        <tr>
+                                            <th>Files Uploaded(At least 1 is needed):</th>
+                                        </tr>
+                                        </thead>
                                         <tbody>
-                                        <tr>
-                                            <td>Files Uploaded:</td>
-                                        </tr>
-                                        <tr>
-                                            <td></td>
-                                        </tr>
-                                        <tr>
-                                            <td></td>
+                                        <tr th:each="picture : *{pictures}">
+                                            <th th:text="${picture}"></th>
                                         </tr>
                                         </tbody>
                                     </table>
@@ -149,12 +169,11 @@
 
                                     <div class="form-group">
                                         <div class="col-sm-6 col-sm-offset-3" id="submit-cont">
-                                            <input type="submit" name="login-submit" id="login-submit" tabindex="4"
-                                                   class="form-control btn btn-makeOffer" value="Send request">
+                                            <input type="submit" name="add-submit" id="add-submit"
+                                                   tabindex="4"
+                                                   class="form-control btn btn-add" value="Create">
                                         </div>
                                     </div>
-
-
                                 </form>
 
                             </div>
@@ -166,7 +185,8 @@
     </div>
 </main>
 
-<footer>&copy Victory 2022. All rights reserved.</footer>
+
+<th:block th:replace="~{/fragments/footer.html}"/>
 
 </body>
 </html>
