--- a/src/main/resources/templates/editDeck.html
+++ b/src/main/resources/templates/editDeck.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+>
 <head>
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
@@ -53,7 +56,7 @@
                             <div class="col-lg-12">
 
 
-                                <form id="deck-form" th:method="patch" th:action="@{/decks/add}"
+                                <form id="deck-form" th:method="patch" th:action="@{/decks/{id}/edit (id=${id})}"
                                       enctype="multipart/form-data"
                                       role="form" style="display: block;" th:object="${deck}">
 
