--- a/src/main/resources/static/css/addForm.css
+++ b/src/main/resources/static/css/addForm.css
@@ -235,7 +235,7 @@ select:hover{
     margin-left: 3px;
 }
 
-.distributor, .creator{
+.distributor, .creator, .deck{
     text-align: left !important;
 }
 
