--- a/src/main/resources/templates/reviews.html
+++ b/src/main/resources/templates/reviews.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -17,55 +13,25 @@
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
 
-    <script src="../static/js/backToTop.js" type="module"></script>
-    <script src="../static/js/sidebar.js" type="module"></script>
+    <script th:src="@{/js/backToTop.js}" type="module"></script>
+    <script th:src="@{/js/sidebar.js}" type="module"></script>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" th:href="@{/css/reviews.css}"/>
 
-    <link rel="stylesheet" href="../static/css/reviews.css"/>
+    <th:block th:replace="~{/fragments/head.html}"/>
 
-    <link rel="icon" href="../static/images/ace-of-spades.png">
-    <title>Victory</title>
 </head>
 <body>
 
 <header>
+
     <nav id="nav" class="navbar navbar-expand">
-
-        <a href="/"><img src="../static/images/emblem.png"></a>
-
-        <ul id="menu">
-            <li><a href="/catalog">Catalog</a></li>
-            <li><a href="/search">Offers</a></li>
-            <span id="guest-nav">
-                    <li class="guest"><a href="/login">Login</a></li>
-                    <li class="guest"><a href="/register">Register</a></li>
-                </span>
-            <span id="user-nav">
-                    <li class="user"><a href="/create">Wishlist</a></li>
-                    <li id="logoutBtn" class="user"><a href="javascript:void(0)">Logout</a></li>
-            </span>
-        </ul>
-
-        <a href="#" id="menu-toggle" class="navbar-brand">&#9776</a>
+        <th:block th:replace="~{/fragments/navigation.html}"/>
     </nav>
+
 </header>
 
-<div id="wrapper">
-    <div id="sidebar-wrapper">
-        <ul class="sidebar-nav">
-            <li><a href="#">Catalog</a></li>
-            <li><a href="#">Offers</a></li>
-            <li><a href="#">Login</a></li>
-            <li><a href="#">Register</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Wishlist</a></li>
-            <li><a href="#">Logout</a></li>
-        </ul>
-    </div>
-</div>
+<th:block th:replace="~{/fragments/sidebar.html}"/>
 
 <main>
 
@@ -82,73 +48,73 @@
                             <h5 class="mb-0 mb-4">Ratings and Reviews</h5>
                             <div class="graph-star-rating-header">
 
-                                <p class="text-black mb-4 mt-2" id="rating">Rated 3.5 out of 5</p>
+                                <p class="text-black mb-4 mt-2" id="rating" th:text="|Rated ${averageRating} out of 5|"></p>
                             </div>
                             <div class="graph-star-rating-body">
 
                                 <div class="rating-list">
                                     <div class="rating-list-left text-black">
-                                        <a href="#" class="sort-by-rating">5 Star</a>
+                                        <a class="sort-by-rating">5 Star</a>
                                     </div>
                                     <div class="rating-list-center">
                                         <div class="progress">
-                                            <div style="width: 56%" aria-valuemax="5" aria-valuemin="0" aria-valuenow="5" role="progressbar" class="progress-bar bg-primary">
+                                            <div th:style="'width: ${ratings.get(5)}'" aria-valuemax="5" aria-valuemin="0" aria-valuenow="5" role="progressbar" class="progress-bar bg-primary">
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="rating-list-right text-black">56%</div>
+                                    <div class="rating-list-right text-black" th:text="|${ratings.get(5) ?: 0}%|"></div>
                                 </div>
 
                                 <div class="rating-list">
                                     <div class="rating-list-left text-black">
-                                        <a href="#" class="sort-by-rating">4 Star</a>
+                                        <a class="sort-by-rating">4 Star</a>
                                     </div>
                                     <div class="rating-list-center">
                                         <div class="progress">
-                                            <div style="width: 23%" aria-valuemax="5" aria-valuemin="0" aria-valuenow="5" role="progressbar" class="progress-bar bg-primary">
+                                            <div th:style="'width: ${ratings.get(4)}'" aria-valuemax="5" aria-valuemin="0" aria-valuenow="5" role="progressbar" class="progress-bar bg-primary">
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="rating-list-right text-black">23%</div>
+                                    <div class="rating-list-right text-black" th:text="|${ratings.get(4) ?: 0}%|"></div>
                                 </div>
 
                                 <div class="rating-list">
                                     <div class="rating-list-left text-black">
-                                        <a href="#" class="sort-by-rating">3 Star</a>
+                                        <a class="sort-by-rating">3 Star</a>
                                     </div>
                                     <div class="rating-list-center">
                                         <div class="progress">
-                                            <div style="width: 11%" aria-valuemax="5" aria-valuemin="0" aria-valuenow="5" role="progressbar" class="progress-bar bg-primary">
+                                            <div th:style="'width: ${ratings.get(3)}'" aria-valuemax="5" aria-valuemin="0" aria-valuenow="5" role="progressbar" class="progress-bar bg-primary">
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="rating-list-right text-black">11%</div>
+                                    <div class="rating-list-right text-black" th:text="|${ratings.get(3) ?: 0}%|"></div>
                                 </div>
 
                                 <div class="rating-list">
                                     <div class="rating-list-left text-black">
-                                        <a href="#" class="sort-by-rating">2 Star</a>
+                                        <a class="sort-by-rating">2 Star</a>
                                     </div>
                                     <div class="rating-list-center">
                                         <div class="progress">
-                                            <div style="width: 2%" aria-valuemax="5" aria-valuemin="0" aria-valuenow="5" role="progressbar" class="progress-bar bg-primary">
+                                            <div th:style="'width: ${ratings.get(2)}'" aria-valuemax="5" aria-valuemin="0" aria-valuenow="5" role="progressbar" class="progress-bar bg-primary">
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="rating-list-right text-black">2%</div>
+                                    <div class="rating-list-right text-black" th:text="|${ratings.get(2) ?: 0}%|"></div>
                                 </div>
 
                                 <div class="rating-list">
                                     <div class="rating-list-left text-black">
-                                        <a href="#" class="sort-by-rating">1 Star</a>
+                                        <a class="sort-by-rating">1 Star</a>
                                     </div>
                                     <div class="rating-list-center">
                                         <div class="progress">
-                                            <div style="width: 2%" aria-valuemax="5" aria-valuemin="0" aria-valuenow="5" role="progressbar" class="progress-bar bg-primary">
+                                            <div th:style="'width: ${ratings.get(1)}'" aria-valuemax="5" aria-valuemin="0" aria-valuenow="5" role="progressbar" class="progress-bar bg-primary">
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="rating-list-right text-black">2%</div>
+                                    <div class="rating-list-right text-black" th:text="|${ratings.get(1) ?: 0}%|"></div>
                                 </div>
 
                             </div>
@@ -164,36 +130,23 @@
                         <div class="bg-white rounded shadow-sm p-4 mb-4 restaurant-detailed-ratings-and-reviews" id="review-section">
                             <h5 class="mb-1">All Ratings and Reviews</h5>
 
-                            <div class="reviews-members pt-4 pb-4">
+                            <div class="reviews-members pt-4 pb-4" th:each="review : ${reviews}" th:object="${review}">
                                 <div class="media">
-                                    <a href="#"><img alt="Generic placeholder image" src="http://bootdey.com/img/Content/avatar/avatar1.png" class="mr-3 rounded-pill"></a>
                                     <div class="media-body">
                                         <div class="reviews-members-header">
-                                            <h6 class="mb-1"><a class="text-black reviewer" href="#">Singh Osahan</a></h6>
-                                            <p class="text-gray">Tue, 20 Mar 2020</p>
+                                            <h6 class="mb-1">
+                                                <a class="text-black reviewer" th:href="@{/users/profile/{name} (name=*{creatorUsername})}" th:text="*{creatorUsername}">
+                                                </a>
+                                            </h6>
+                                            <p class="text-gray" th:text="*{created}">Tue, 20 Mar 2020</p>
                                         </div>
                                         <div class="reviews-members-body">
-                                            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections </p>
+                                            <p th:text="*{review}"></p>
                                         </div>
                                     </div>
                                 </div>
                             </div>
 
-                            <hr>
-                            <div class="reviews-members pt-4 pb-4">
-                                <div class="media">
-                                    <a href="#"><img alt="Generic placeholder image" src="http://bootdey.com/img/Content/avatar/avatar6.png" class="mr-3 rounded-pill"></a>
-                                    <div class="media-body">
-                                        <div class="reviews-members-header">
-                                            <h6 class="mb-1"><a class="text-black reviewer" href="#">Gurdeep Singh</a></h6>
-                                            <p class="text-gray">Tue, 20 Mar 2020</p>
-                                        </div>
-                                        <div class="reviews-members-body">
-                                            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
                             <hr>
                             <a class="text-center w-100 d-block mt-4 font-weight-bold" id="reveal-reviews" href="#">See All Reviews</a>
                         </div>
@@ -202,18 +155,28 @@
                     <div class="bg-white rounded shadow-sm p-4 mb-5 rating-review-select-page">
                         <h5 class="mb-4">Leave Comment</h5>
                         <p class="mb-2">Rate the Product</p>
-                        <form id="review-form">
+                        <form id="review-form" th:object="createReview">
 
-                            <input type="number" name="rating" tabindex="2" min="1" max="5"
-                                   class="form-control" id="review-rating" placeholder="Rating(1-5)">
-
-                            <div class="form-group">
-                                <label>Your Comment</label>
-                                <textarea class="form-control"></textarea>
+                            <input type="number" name="rating" tabindex="2"
+                                   min="1" max="5"
+                                   class="form-control" id="review-rating"
+                                   placeholder="Rating(1-5)"
+                                   th:field="*{rating}" th:errorclass="invalid-field"
+                            >
+                            <div class="error" th:text="${#strings.listJoin(#fields.errors('rating'), '; ')}">
                             </div>
 
                             <div class="form-group">
-                                <button class="btn btn-primary btn-sm" type="button" id="submit-review-btn"> Submit Comment </button>
+                                <label>Your Comment</label>
+                                <textarea class="form-control" form="review-form"
+                                            th:field="*{review}" th:errorclass="invalid-field"
+                                ></textarea>
+                                <div class="error" th:text="${#strings.listJoin(#fields.errors('review'), '; ')}">
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <button class="btn btn-primary btn-sm" type="submit" id="submit-review-btn" form="review-form"> Submit Comment </button>
                             </div>
                         </form>
                     </div>
@@ -224,7 +187,8 @@
 
 </main>
 
-<footer>&copy Victory 2022. All rights reserved.</footer>
+
+<th:block th:replace="~{/fragments/footer.html}"/>
 
 </body>
 </html>
