whole review page is ready - only show more button remains(can be removed if in a hurry)

--- a/src/main/resources/templates/addDeck.html
+++ b/src/main/resources/templates/addDeck.html
@@ -59,7 +59,7 @@
 
 
                                 <form id="deck-form" th:method="post" th:action="@{/decks/add}" enctype="multipart/form-data"
-                                      role="form" style="display: block;" th:object="${deck}">
+                                      role="form" style="display: block;" th:object="${addDeck}">
 
 
                                     <div class="form-group">
