--- a/src/main/resources/templates/addOffer.html
+++ b/src/main/resources/templates/addOffer.html
@@ -59,7 +59,7 @@
 
                                 <form id="offer-form" th:method="post" th:action="@{/offers/add}"
                                       role="form" style="display: block;"
-                                      th:object="${offer}"
+                                      th:object="${addOffer}"
                                       enctype="multipart/form-data"
                                 >
 
