--- a/src/main/resources/templates/editDeck.html
+++ b/src/main/resources/templates/editDeck.html
@@ -58,7 +58,7 @@
 
                                 <form id="deck-form" th:method="patch" th:action="@{/decks/{id}/edit (id=${id})}"
                                       enctype="multipart/form-data"
-                                      role="form" style="display: block;" th:object="${deck}">
+                                      role="form" style="display: block;" th:object="${editDeck}">
 
 
                                     <div class="form-group">
