--- a/src/main/resources/templates/editOffer.html
+++ b/src/main/resources/templates/editOffer.html
@@ -59,7 +59,7 @@
 
                                 <form id="offer-form"
                                       th:method="patch" th:action="@{/offers/{id}/edit (id=${id})}"
-                                      th:object="${offer}" role="form" style="display: block;"
+                                      th:object="${editOffer}" role="form" style="display: block;"
                                       enctype="multipart/form-data"
                                 >
 
