--- a/src/main/resources/templates/reviews.html
+++ b/src/main/resources/templates/reviews.html
@@ -138,7 +138,7 @@
                                                 <a class="text-black reviewer" th:href="@{/users/profile/{name} (name=*{creatorUsername})}" th:text="*{creatorUsername}">
                                                 </a>
                                             </h6>
-                                            <p class="text-gray" th:text="*{created}">Tue, 20 Mar 2020</p>
+                                            <p class="text-gray" th:text="*{#dates.format(created, 'dd-MMM-yyyy')}"></p>
                                         </div>
                                         <div class="reviews-members-body">
                                             <p th:text="*{review}"></p>
@@ -155,7 +155,7 @@
                     <div class="bg-white rounded shadow-sm p-4 mb-5 rating-review-select-page">
                         <h5 class="mb-4">Leave Comment</h5>
                         <p class="mb-2">Rate the Product</p>
-                        <form id="review-form" th:object="createReview">
+                        <form id="review-form" th:object="${addReview}" th:method="POST" th:action="@{/offers/{id}/reviews/add (id=${id})}">
 
                             <input type="number" name="rating" tabindex="2"
                                    min="1" max="5"
@@ -186,6 +186,12 @@
     </div>
 
 </main>
+
+<script th:inline="javascript">
+    if([[${badIinfo}]]){
+        document.getElementById('review-form').scrollIntoView({behavior:'smooth'});
+    }
+</script>
 
 
 <th:block th:replace="~{/fragments/footer.html}"/>
