--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -80,6 +80,7 @@
                                 <tr id="purchase-row">
                                     <td colspan="2"></td>
                                     <td class="text-end">
+<!--                                        todo: order functionality-->
                                         <input type="submit" form="cart-notes" id="purchase-btn" value="Order">
                                     </td>
                                 </tr>
