--- a/src/main/resources/templates/notifications.html
+++ b/src/main/resources/templates/notifications.html
@@ -29,6 +29,7 @@
 
     <link rel="icon" href="../static/images/ace-of-spades.png">
     <title>Victory</title>
+<!--    todo: notifications page-->
 </head>
 <body>
 
